# social_media

./: README.md  db.sqlite3  pyproject.toml  requirements.txt  team_b-key.pem
.github/workflows/: cicd.yml
Comments/: models.py  serializers.py  urls.py  views.py
Comments/migrations/: 0001_initial.py  0002_alter_comment_author_alter_comment_post_id.py  0002_rename_post_id_comment_post.py
Likes/: models.py  serializers.py  urls.py  views.py
Likes/migrations/: 0001_initial.py  0002_alter_like_post_id_alter_like_username.py
Posting/: apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
Posting/migrations/: 0001_initial.py  0002_alter_post_author.py  0002_alter_post_like.py
Users/: admin.py  models.py  serializers.py  urls.py  views.py
Users/migrations/: 0001_initial.py
config/: settings.py  urls.py
